# fast_api_template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
blueprints/feature/: {{name}}_controller.py.template  {{name}}_dto.py.template  {{name}}_injection.py.template  {{name}}_use_case.py.template
blueprints/route/: {{file_name}}_controller.py.template  {{file_name}}_dto.py.template  {{file_name}}_injection.py.template  {{file_name}}_use_case.py.template
docs/adrs/: project_structure.md
scripts/: create_subscription_plan.py  create_tables.py  dev.py
src/fast_api_template/core/: main.py  middlewares.py  router.py
src/fast_api_template/core/infra/: base_router.py  database.py  env.py  gunicorn.py  postgres.py
src/fast_api_template/infra/: v1_router.py
src/fast_api_template/modules/health_check/infra/: health_check_router.py
src/fast_api_template/modules/shared/: base_dto.py  base_model.py  base_use_case.py
src/fast_api_template/modules/shared/dependency_injections/: postgree_session.py  require_user_injection.py
src/fast_api_template/modules/shared/middlewares/: process_time_middleware.py
src/fast_api_template/modules/shared/utils/: crypto.py
src/fast_api_template/modules/subscription_plan/: subscription.py
src/fast_api_template/modules/subscription_plan/repository/: subscription_plan_repository.py  subscription_plan_repository_contract.py  subscription_plan_repository_injection.py
src/fast_api_template/modules/user/: user.py
src/fast_api_template/modules/user/repository/: user_repository.py  user_repository_contract.py  user_repository_injection.py
src/fast_api_template/modules/user/v1/: user_router_v1.py
tests/: conftest.py
tests/fixtures/: session_fixture.py
tests/users/: test_create_user.py
(+44 files in other folders)
